--- a/_publications/Bale2019.md
+++ b/_publications/Bale2019.md
@@ -1,5 +1,5 @@
 ---
-title: "Paper Title Number 1"
+title: "Highly structured slow solar wind emerging from an equatorial coronal hole"
 collection: publications
 permalink: /publication/2009-10-01-paper-title-number-1
 date: 2009-10-01
