--- a/_publications/Bale2019.md
+++ b/_publications/Bale2019.md
@@ -1,17 +1,20 @@
 ---
 title: "Highly structured slow solar wind emerging from an equatorial coronal hole"
 collection: publications
-permalink: /publication/2009-10-01-paper-title-number-1
+permalink: /publication/Bale2019
 date: 2009-10-01
 venue: 'Nature'
+authors: 'Bale, S D; Badman, S T; Bonnell, J W; Bowen, T A; Burgess, D; Case, A W; Cattell, C A; Chandran, B D G; Chaston, C C; Chen, C H K; Drake, J F; de Wit, T Dudok; Eastwood, J P; Ergun, R E; Farrell, W M; Fong, C; Goetz, K; Goldstein, M; Goodrich, K A; Harvey, P R; Horbury, T S; Howes, G G; Kasper, J C; Kellogg, P J; Klimchuk, J A; Korreck, K E; Krasnoselskikh, V V; Krucker, S; <b>Laker, R</b>; Larson, D E; MacDowall, R J; Maksimovic, M; Malaspina, D M; Martinez-Oliveros, J; McComas, D J; Meyer-Vernet, N; Moncuquet, M; Mozer, F S; Phan, T D; Pulupa, M; Raouafi, N E; Salem, C; Stansby, D; Stevens, M; Szabo, A; Velli, M; Woolley, T; Wygant, J R'
 citation: 'Bale, S. D., Badman, S. T., Bonnell, J. W., Bowen, T. A., Burgess, D., Case, A. W., … Wygant, J. R. (2019). Highly structured slow solar wind emerging from an equatorial coronal hole. Nature, 576(7786), 237–242.'
 doi: '10.1038/s41586-019-1818-7'
 type: 'published'
 bib: '@article{Bale2019,
 
-author = {Bale, S. D. and Badman, S. T. and Bonnell, J. W. and Bowen, T. A. and Burgess, D. and Case, A. W. and Cattell, C. A. and Chandran, B. D.G. and Chaston, C. C. and Chen, C. H.K. and Drake, J. F. and de Wit, T. Dudok and Eastwood, J. P. and Ergun, R. E. and Farrell, W. M. and Fong, C. and Goetz, K. and Goldstein, M. and Goodrich, K. A. and Harvey, P. R. and Horbury, T. S. and Howes, G. G. and Kasper, J. C. and Kellogg, P. J. and Klimchuk, J. A. and Korreck, K. E. and Krasnoselskikh, V. V. and Krucker, S. and Laker, R. and Larson, D. E. and MacDowall, R. J. and Maksimovic, M. and Malaspina, D. M. and Martinez-Oliveros, J. and McComas, D. J. and Meyer-Vernet, N. and Moncuquet, M. and Mozer, F. S. and Phan, T. D. and Pulupa, M. and Raouafi, N. E. and Salem, C. and Stansby, D. and Stevens, M. and Szabo, A. and Velli, M. and Woolley, T. and Wygant, J. R.},
+author = {Bale, S D and Badman, S T and Bonnell, J W and Bowen, T A and Burgess, D and Case, A W and Cattell, C A and Chandran, B D G and Chaston, C C and Chen, C H K and Drake, J F and de Wit, T Dudok and Eastwood, J P and Ergun, R E and Farrell, W M and Fong, C and Goetz, K and Goldstein, M and Goodrich, K A and Harvey, P R and Horbury, T S and Howes, G G and Kasper, J C and Kellogg, P J and Klimchuk, J A and Korreck, K E and Krasnoselskikh, V V and Krucker, S and Laker, R and Larson, D E and MacDowall, R J and Maksimovic, M and Malaspina, D M and Martinez-Oliveros, J and McComas, D J and Meyer-Vernet, N and Moncuquet, M and Mozer, F S and Phan, T D and Pulupa, M and Raouafi, N E and Salem, C and Stansby, D and Stevens, M and Szabo, A and Velli, M and Woolley, T and Wygant, J R},
 
 doi = {10.1038/s41586-019-1818-7},
+
+issn = {14764687},
 
 journal = {Nature},
 
@@ -25,7 +28,7 @@ title = {{Highly structured slow solar wind emerging from an equatorial coronal 
 
 volume = {576},
 
-year = {2019},
+year = {2019}
 }'
 key: 'Bale2020'
 abstract: 'During the solar minimum, when the Sun is at its least active, the solar wind is observed at high latitudes as a predominantly fast (more than 500 kilometres per second), highly Alfvénic rarefied stream of plasma originating from deep within coronal holes. Closer to the ecliptic plane, the solar wind is interspersed with a more variable slow wind of less than 500 kilometres per second. The precise origins of the slow wind streams are less certain; theories and observations suggest that they may originate at the tips of helmet streamers, from interchange reconnection near coronal hole boundaries or within coronal holes with highly diverging magnetic fields. The heating mechanism required to drive the solar wind is also unresolved, although candidate mechanisms include Alfvén-wave turbulence, heating by reconnection in nanoflares, ion cyclotron wave heating and acceleration by thermal gradients. At a distance of one astronomical unit, the wind is mixed and evolved, and therefore much of the diagnostic structure of these sources and processes has been lost. Here we present observations from the Parker Solar Probe at 36 to 54 solar radii that show evidence of slow Alfvénic solar wind emerging from a small equatorial coronal hole. The measured magnetic field exhibits patches of large, intermittent reversals that are associated with jets of plasma and enhanced Poynting flux and that are interspersed in a smoother and less turbulent flow with a near-radial magnetic field. Furthermore, plasma-wave measurements suggest the existence of electron and ion velocity-space micro-instabilities that are associated with plasma heating and thermalization processes. Our measurements suggest that there is an impulsive mechanism associated with solar-wind energization and that micro-instabilities play a part in heating, and we provide evidence that low-latitude coronal holes are a key source of the slow solar wind.'
