--- a/my_pubs.bib
+++ b/my_pubs.bib
@@ -9,7 +9,8 @@
   pages = {237--242},
   publisher = {{Springer US}},
   issn = {14764687},
-  doi = {10.1038/s41586-019-1818-7}
+  doi = {10.1038/s41586-019-1818-7},
+  month=dec
 }
 
 @article{Bale2021,
@@ -42,6 +43,7 @@
   title = {Statistical Analysis of Orientation, Shape, and Size of Solar Wind Switchbacks},
   author = {Laker, R. and Horbury, T. S. and Bale, S. D. and Matteini, L. and Woolley, T. and Woodham, L. D. and Badman, S. T. and Pulupa, M. and Kasper, J. C. and Stevens, M. and Case, A. W. and Korreck, K. E.},
   year = {2021},
+  month=jun,
   journal = {Astronomy \& Astrophysics},
   doi = {10.1051/0004-6361/202039354}
 }
@@ -52,6 +54,7 @@
   year = {2021},
   journal = {Astronomy \& Astrophysics},
   volume = {652},
+  month=aug,
   doi = {10.1051/0004-6361/202140679}
 }
 
@@ -63,6 +66,7 @@
 	year = 2021,
 	volume = 656,
 	pages = "A39",
+    month=dec
 }
 
 @article{Telloni2021a,
@@ -75,7 +79,8 @@
   pages = {L21},
   publisher = {{American Astronomical Society}},
   issn = {2041-8205},
-  doi = {10.3847/2041-8213/abf7d1}
+  doi = {10.3847/2041-8213/abf7d1},
+  month=may
 }
 
 @article{Telloni2021b,
@@ -97,7 +102,8 @@
   year = {2021},
   journal = {A\&A},
   volume = {650},
-  doi = {10.1051/0004-6361/202039415}
+  doi = {10.1051/0004-6361/202039415},
+  month=jun,
 }
 
 @article{Woolley2020,
@@ -109,7 +115,8 @@
   number = {4},
   pages = {5524--5531},
   issn = {0035-8711},
-  doi = {10.1093/mnras/staa2770}
+  doi = {10.1093/mnras/staa2770},
+  month=sep,
 }
 
 
