full journal instead of A amd A

--- a/my_pubs.bib
+++ b/my_pubs.bib
@@ -101,7 +101,7 @@
   author = {Woodham, L D and Horbury, T S and Matteini, L and Woolley, T and Laker, R and Bale, S D and Nicolaou, G and Stawarz, J E and Stansby, D and Hietala, H and Larson, D E and Livi, R and Verniero, J L and McManus, M and Kasper, J C and Korreck, K E and Raouafi, N and Moncuquet, M and Pulupa, M P},
   year = {2021},
   month=jun,
-  journal = {A\&A},
+  journal = {Astronomy \& Astrophysics},
   volume = {650},
   doi = {10.1051/0004-6361/202039415}
 }
