add files to pubs, fixed link colour

--- a/my_pubs.bib
+++ b/my_pubs.bib
@@ -45,7 +45,8 @@
   year = {2021},
   month=jun,
   journal = {Astronomy \& Astrophysics},
-  doi = {10.1051/0004-6361/202039354}
+  doi = {10.1051/0004-6361/202039354},
+  file={https://www.ronanlaker.com/files/Laker2021.pdf}
 }
 
 @article{Laker2021a,
@@ -55,7 +56,8 @@
   month=aug,
   journal = {Astronomy \& Astrophysics},
   volume = {652},
-  doi = {10.1051/0004-6361/202140679}
+  doi = {10.1051/0004-6361/202140679},
+  file={https://www.ronanlaker.com/files/Laker2021a.pdf}
 }
 
 @article{Matteini2021a,
