added Laker2022 to publications

--- a/my_pubs.bib
+++ b/my_pubs.bib
@@ -173,5 +173,16 @@
   doi = {10.1093/mnras/stab2281}
 }
 
+@article{Laker2022,
+  title = {Switchback Deflections beyond the Early Parker Solar Probe Encounters},
+  author = {Laker, R. and Horbury, T S and Matteini, L and Bale, S D and Stawarz, J E and Woodham, L D and Woolley, T},
+  year = {2022},
+  month = sep,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  pages = {stac2477},
+  issn = {0035-8711, 1365-2966},
+  doi = {10.1093/mnras/stac2477},
+  copyright = {All rights reserved},
+}
 
 
