--- a/_projects/2017-09-23-hab.md
+++ b/_projects/2017-09-23-hab.md
@@ -3,6 +3,7 @@ author_profile: false
 title: "High altitude balloon"
 toc: true
 toc_sticky: true
+permalink: /projects/hab/
 redirect_from:
   - /HAB/
 header:
