--- a/_projects/2022-01-16-obsidian.md
+++ b/_projects/2022-01-16-obsidian.md
@@ -1,5 +1,6 @@
 ---
 title: "Obsidian Tutorial"
+permalink: /projects/obsidian
 header:
     overlay_image: /images/obsidian.png
     overlay_filter: 0.2
