--- a/my_pubs.bib
+++ b/my_pubs.bib
@@ -186,3 +186,66 @@
 }
 
 
+@article{Perrone2022,
+	author = {Perrone, D. and Perri, S. and Bruno, R. and Stansby, D. and D'Amicis, R. and Jagarlamudi, V. K. and Laker, R. and Toledo-Redondo, S. and Stawarz, J. E. and Telloni, D. and De Marco, R. and Owen, C. J. and Raines, J. M. and Settino, A. and Lavraud, B. and Maksimovic, M. and Vaivads, A. and Phan, T. D. and Fargette, N. and Louarn, P. and Zouganelis, I.},
+	title = {Evolution of coronal hole solar wind in the inner heliosphere: Combined observations by Solar Orbiter and Parker Solar Probe},
+	DOI= {10.1051/0004-6361/202243989},
+	journal = {Astronomy \& Astrophysics},
+	year = {2022},
+	volume = {668},
+	pages = {A189},
+}
+
+@article{Horbury2023,
+    author = {Horbury, T. S. and Bale, Stuart D. and McManus, Michael D. and Larson, Davin and Kasper, J. C. and Laker, Ronan and Matteini, Lorenzo and Raouafi, Nour E. and Velli, Marco and Woodham, Lloyd D. and Woolley, Thomas and Fedorov, Andrey and Louarn, Philippe and Kieokaew, Rungployphan and Durovcova, Tereza and Chandran, Ben and Owen, C. J.},
+    title = {Switchbacks, microstreams, and broadband turbulence in the solar wind},
+    journal = {Physics of Plasmas},
+    volume = {30},
+    number = {8},
+    pages = {082905},
+    year = {2023},
+    month = {08},
+    issn = {1070-664X},
+    doi = {10.1063/5.0123250},
+}
+
+@article{Laker2024a,
+  author = {Laker, R. and Horbury, T. S. and O'Brien, H. and Fauchon-Jones, E. J. and Angelini, V. and Fargette, N. and Amerstorfer, T. and Bauer, M. and Möstl, C. and Davies, E. E. and Davies, J. A. and Harrison, R. and Barnes, D. and Dumbović, M.},
+  title = {Using Solar Orbiter as an Upstream Solar Wind Monitor for Real Time Space Weather Predictions},
+  journal = {Space Weather},
+  volume = {22},
+  number = {2},
+  doi = {10.1029/2023SW003628},
+  year = {2024}
+}
+
+@article{Laker2023a,
+  author = {Laker, Ronan and Horbury, T S and Woodham, L D and Bale, S D and Matteini, L},
+  title = {Coherent deflection pattern and associated temperature enhancements in the near-Sun solar wind},
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {527},
+  number = {4},
+  pages = {10440-10447},
+  year = {2023},
+  month = {11},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stad3351},
+}
+
+@article{Raouafi2023,
+  author = {N. E. Raouafi and L. Matteini and J. Squire and S. T. Badman and M. Velli and K. G. Klein and C. H. K. Chen and W. H. Matthaeus and A. Szabo and M. Linton and R. C. Allen and J. R. Szalay and R. Bruno and R. B. Decker and M. Akhavan-Tafti and O. V. Agapitov and S. D. Bale and R. Bandyopadhyay and K. Battams and L. Berčič and S. Bourouaine and T. A. Bowen and C. Cattell and B. D. G. Chandran and R. Chhiber and C. M. S. Cohen and R. D'Amicis and J. Giacalone and P. Hess and R. A. Howard and T. S. Horbury and V. K. Jagarlamudi and C. J. Joyce and J. C. Kasper and J. Kinnison and R. Laker and P. Liewer and D. M. Malaspina and I. Mann and D. J. McComas and T. Niembro-Hernandez and T. Nieves-Chinchilla and O. Panasenco and P. Pokorný and A. Pusack and M. Pulupa and J. C. Perez and P. Riley and A. P. Rouillard and C. Shi and G. Stenborg and A. Tenerani and J. L. Verniero and N. Viall and A. Vourlidas and B. E. Wood and L. D. Woodham and T. Woolley},
+  title = {Parker Solar Probe: Four Years of Discoveries at Solar Cycle Minimum},
+  journal = {Space Science Reviews},
+  volume = {219},
+  number = {8},
+  doi = {10.1007/s11214-023-00952-4},
+  year = {2023}
+}
+
+@article{Laker2023b,
+  author = {R. Laker},
+  title = {Investigating the structure of the near-Sun solar wind},
+  journal = {Thesis},
+  doi = {10.25560/109178},
+  year = {2023}
+}
